# tesachor-rag-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  dev.ps1  dev.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: models.py  routes.py
app/api/v1/: __init__.py  schemas.py
app/api/v1/endpoints/: routes.py
app/core/: rag_pipeline.py
app/scripts/: build_vectorstore.py
app/services/: factory.py  hf_inference_embeddings.py  hf_inference_llm.py  hf_llm.py  vector_store.py
app/services/llm/: hf_llm.py
app/utils/: __init__.py  chunking.py  data_transformer.py
migrations/: 01_init.sql
postman/: Tesachor_10-05-2026.postman_collection.json  Tesachor_2026-05-10T05.postman_environment.json
scripts/: build_vectorstore.py  bulk_ingest.py  ingest_jsonl.py
services/api/: .env.template  Dockerfile  pyproject.toml
services/api/app/: main.py  schemas.py  utils.py
services/api/app/api/v1/endpoints/: __init__.py  routes.py
services/api/app/routers/: ingest.py
services/api/app/services/embeddings/: hf_inference_embeddings.py
services/api/app/services/llm/: __init__.py
services/app/: config.py
services/app/services/embeddings/: __init__.py  hf_embeddings.py
services/embedding/: .env.template  Dockerfile  app.py  config.py  dependencies.py  exceptions.py  pyproject.toml  schemas.py
services/embedding/providers/: __init__.py  base.py  cohere.py  gemini.py  local.py
services/ingestion/: .env.template  Dockerfile  pyproject.toml  utils.py  worker.py
services/llm/: .env.template  Dockerfile  app.py  config.py  dependencies.py  exceptions.py  pyproject.toml  schemas.py
services/llm/providers/: base.py  openai.py  openrouter.py
services/monitoring/: prometheus.yml
src/: main.py
src/api/v1/: router.py
