[project]
name = "tesachor-rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.scripts]
run-app = "main:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.package-dir]
"" = "src"
