[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tesachor-rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi[standard]>=0.135.1",
    "huggingface-hub>=0.35.0",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.scripts]
run-app = "app.main:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
