[project]
name = "api-service"
version = "0.1.0"
description = "FastAPI orchestrator for the RAG engine"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "psycopg2-binary",
    "requests",
    "celery",
    "redis"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
