[project]
name = "api-service"
version = "0.1.0"
requires-python = ">=3.11"
description = "FastAPI orchestrator for the RAG engine"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "psycopg2-binary",
    "requests",
    "celery",
    "redis",
    "google-genai",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
