[project]
name = "embedding-service"
version = "0.1.0"
description = "Microservice for generating text embeddings"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "torch",
    "pydantic",
    "google-genai",
    "cohere>=6.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
