[project]
name = "ingestion-service"
version = "0.1.0"
description = "Background worker for document processing and vectorization"
dependencies = [
    "celery",
    "redis",
    "psycopg2-binary",
    "requests",
    "langchain-text-splitters",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
