[project]
name = "ingestion-service"
version = "0.1.0"
description = "Background worker for document processing and vectorization"
requires-python = ">=3.11"
dependencies = [
    "celery",
    "redis",
    "psycopg2-binary",
    "requests",
    "langchain-text-splitters",
    "pydantic",
    "mlflow"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["worker", "utils"]
